# HW_12_web

./: pyproject.toml
app/: main.py
app/api/endpoints/: birthday.py  contact.py
app/auth/: auth_utils.py  authenticate.py  config.py  crud.py  jwt.py  main.py  models.py  routes.py
app/database/: __init__.py  base.py  crud.py  models.py  schemas.py
