[tool.poetry]
name = "myproject"
version = "0.1.0"
description = "My project description"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
sqlalchemy = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
